--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-lxml==4.5.2
-requests==2.24.0
-numpy==1.19.2
-plotly==4.12.0
-streamlit==0.75.0
+numpy==1.20.1
+pandas==1.1.3
+requests==2.25.1
+streamlit==0.76.0
+lxml==4.6.2
+plotly==4.14.3
 streamlit_echarts==0.2.0
